fix: overflow clipping issue

--- a/src/pages/FieldExtension/styles.scss
+++ b/src/pages/FieldExtension/styles.scss
@@ -165,6 +165,7 @@
         .tr {
           .td {
             border: 1px solid #f5f5f5;
+            padding-bottom: 2px;
             overflow: inherit;
 
             &.highlight-column {
@@ -325,17 +326,12 @@ html {
   white-space: pre-wrap;
   border: none;
   padding: 0.5rem;
-  padding-right: 20px;
   color: #424242;
   font-size: 1rem;
   resize: none;
   background-color: white;
   box-sizing: border-box;
   flex: 1 1 auto;
-  width: 100%;
-  min-height: 100%;
-  overflow-wrap: break-word;
-  word-break: break-word;
 
   br {
     display: none;
@@ -444,10 +440,10 @@ html {
 }
 
 .td {
-  overflow: visible;
+  overflow: hidden;
   color: #424242;
   align-items: stretch;
-  // padding: 0.3rem 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   min-height: 46px;
@@ -455,18 +451,14 @@ html {
   height: auto;
 
   .cell {
-    overflow-y: auto;
     overflow-x: hidden;
     text-overflow: ellipsis;
-    // margin: 0.3rem 0;
     padding: 0.3rem;
-    padding-right: 20px;
     display: flex;
     align-items: flex-start;
     min-height: 46px;
     max-height: 200px;
     height: 100%;
-    position: relative;
 
     &:focus {
       outline: none;
@@ -481,21 +473,16 @@ html {
       }
     }
 
-    // When dropdown is open, allow overflow to escape clipping
-    &:has(.cell-dropdown .Dropdown--open) {
-      overflow: visible;
-    }
-
     .cell-dropdown {
-      position: absolute;
       right: 1px;
       top: 1px;
       visibility: hidden;
-      z-index: 1000;
-      pointer-events: auto;
-      overflow: visible;
 
       .Dropdown--open {
+        border: 1px solid;
+        position: absolute;
+        right: 0.3rem;
+        top: 0.3rem;
         .Dropdown__header {
           svg {
             height: 14px;
@@ -530,8 +517,6 @@ html {
         top: 15px !important;
         left: 0px;
         min-width: 200px;
-        z-index: 1001 !important;
-        position: absolute !important;
 
         .Dropdown__menu__list__item {
           display: flex;
